# AgroLidar

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Agents.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bentoml  Dockerfile.server  LICENSE  Makefile  README.md  RELEASE_NOTES.md  REPO_ADMIN_TODO.md  SECURITY.md  SECURITY_NOTES.md  SUPPORT.md  bentofile.yaml  eslint.config.mjs  mkdocs.yml  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.audit.txt  requirements.txt  ruff.toml  tailwind.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml  model_improvement.md  safety_incident.md
.github/workflows/: ci.yml  codeql.yml  docs-pages.yml  docs.yml  landing.yml  pipeline.yml  pr_checks.yml  release.yml  repo-hygiene.yml  security.yml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/dashboard/: page.tsx
app/demo/: page.tsx
app/legacy/: page.tsx
app/simulator/: page.tsx
components/: Badge.tsx  CodeBlock.tsx  LidarViewer.tsx  SectionTitle.tsx  landing-page.tsx
components/hooks/: useWebGpuSupport.ts
components/simulator/: CameraRig.tsx  ControlPanel.tsx  LidarLayer.tsx  Minimap.tsx  SimulatorApp.tsx  SimulatorCanvas.tsx  SimulatorHUD.tsx  Vehicle.tsx  VehicleSelector.tsx  World.tsx
components/simulator/missions/: DroneMissionOverlay.tsx
components/simulator/vehicles/: DroneVehicle.tsx  TractorVehicle.tsx
components/ui/: dialog.tsx  dropdown-menu.tsx  toast.tsx
configs/: active_learning.yaml  base.yaml  demo_quick.yaml  eval.yaml  infer.yaml  mining.yaml  mlflow.yaml  retrain.yaml  road_pretrain.yaml  safety_policy.yaml  server.yaml  train.yaml  training.yaml
data/: README.md
docs/: API_INTEGRATION_GUIDE.md  BUYER_CHECKLIST.md  CHANGELOG.md  CONFIGURATION_REFERENCE.md  CONTRIBUTING.md  DATA_COLLECTION_AND_RETRAINING.md  DATA_SCHEMA.md  HARDWARE_DEPLOYMENT_GUIDE.md  INSTALLATION_AND_COMMISSIONING.md  OPERATIONS_MANUAL.md  PLATFORM_ADAPTATION_MATRIX.md  README.md  REFERENCE_ARCHITECTURES.md  REGULATORY_AND_COMPLIANCE.md  SAFETY_AND_LIMITATIONS.md  SANDBOX_AND_DEMO_MODE.md  SENSOR_CALIBRATION.md  VEHICLE_COMPATIBILITY_GUIDE.md  _config.yml  api-reference.md  architecture.md  development.md  getting-started.md  index.md  inference.md  quickstart.md  release-checklist.md  release-process.md  roadmap.md  simulator-architecture.md  synthetic-data.md  training.md  usage.md  vector-search.md  webgpu-viewer.md
docs/assets/: README.md
i18n/: request.ts
i18n/messages/: en.json  es.json
inference_server/: __init__.py  bento_service.py  config.py  health.py  main.py  middleware.py  models.py  predictor.py
lib/sim/: config.ts  loop.ts  math.ts  rng.ts  scenarios.ts  store.ts
lib/sim/export/: run-export.ts
lib/sim/lidar/: hazards.ts  pipeline.ts  pointcloud.ts  presets.ts  sensor.ts  spatial-index.ts
lidar_perception/: __init__.py  config.py  embedding.py  logging_config.py  tracking.py  vector_db.py
lidar_perception/active_learning/: __init__.py  miner.py
lidar_perception/api/: main.py
lidar_perception/data/: augmentations.py  datasets.py  hard_case_dataset.py  io.py  preprocessing.py
lidar_perception/evaluation/: __init__.py  failure_mining.py  model_comparison.py  robustness.py
lidar_perception/inference/: __init__.py  engine.py  predictor.py  runtime.py  tracker.py
lidar_perception/models/: __init__.py  backbones.py  base.py  factory.py  heads.py  lidar_net.py
lidar_perception/registry/: __init__.py  model_registry.py
lidar_perception/risk/: __init__.py  scoring.py
lidar_perception/scoring/: __init__.py
lidar_perception/simulation/: __init__.py  agricultural_scene.py
lidar_perception/training/: __init__.py  engine.py  losses.py  metrics.py  pipeline.py
lidar_perception/utils/: checkpoint.py  config.py  logging.py  visualization.py
notebooks/: README.md
outputs/registry/: registry.json
outputs/reports/: eval_report.json  eval_report.md  latest_iteration_summary.md  model_comparison.json  model_comparison.md  production_eval.json  retrain_metadata.json
prompts/: next_iteration.md  readme_visual_mockup_es.md
public/: lidar-demo.html
scripts/: build_review_queue.py  check_installation.py  collect_failures.py  compare_models.py  demo.py  evaluate.py  export_model.py  export_onnx.py  generate_synthetic_data.py  get_latest_run_id.py  infer.py  mine_hard_cases.py  mlflow_ui.sh  promote_model.py  register_model.py  registry_status.py  regression_report.py  retrain.py  run_pipeline.py  safety_gate.py  synthetic_data.py  train.py  validate_onnx.py
tests/: test_active_learning.py  test_config.py  test_config_models.py  test_dataset_manifest.py  test_failure_mining.py  test_hard_case_datasets.py  test_inference_server.py  test_pipeline_contracts.py  test_registry_compare.py  test_retrain_and_promotion.py  test_safety_gate.py  test_version_consistency.py
tests/safety/: test_safety_config.py
tests/sim/: determinism.test.ts  multi-vehicle.test.ts
tests/unit/: test_config.py
(+11 files in other folders)
