[project]
name = "agrolidar"
version = "0.9.0"
description = "Safety-critical LiDAR perception for agricultural machinery"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26,<3.0",
    "torch>=2.1,<3.0",
    "PyYAML>=6.0,<7.0",
    "matplotlib>=3.8,<4.0",
    "tqdm>=4.66,<5.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    "pydantic>=2.7,<3.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
    "redis>=5.0,<7.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0,<1.0",
    "opentelemetry-exporter-otlp>=1.20,<2.0",
    "prometheus-fastapi-instrumentator>=6.0,<8.0",
    "psutil>=5.9,<8.0",
    "bentoml>=1.4,<2.0",
    "onnxsim>=0.4.36,<1.0",
    "onnxruntime>=1.18,<2.0",
    "onnx>=1.20,<2.0",
    "httpx>=0.27,<1.0",
    "mlflow>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<8.0",
    "pytest-asyncio>=0.23,<2.0",
    "ruff>=0.12,<0.13",
    "mypy>=1.8,<2.0",
    "types-PyYAML>=6.0,<7.0",
    "httpx>=0.23,<1.0",
]
viz = [
    "open3d>=0.18; platform_system != 'Linux' or platform_machine != 'aarch64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lidar_perception", "inference_server"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "A", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
files = [
    "lidar_perception/config.py",
    "lidar_perception/utils/config.py",
    "lidar_perception/utils/checkpoint.py",
    "lidar_perception/registry/model_registry.py",
    "lidar_perception/training/metrics.py",
    "lidar_perception/training/pipeline.py",
    "lidar_perception/api/main.py",
]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["lidar_perception.api.main"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "lidar_perception.data.*",
    "lidar_perception.inference.*",
    "lidar_perception.models.*",
    "lidar_perception.scoring",
    "lidar_perception.simulation.*",
    "lidar_perception.tracking",
    "lidar_perception.training.engine",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=lidar_perception --cov-report=term-missing"

[tool.uv]
python-preference = "only-managed"
python-downloads = "automatic"
required-environments = ["python_version >= '3.11' and python_version < '3.14'"]
preview = ["free-threaded"]

[[tool.mypy.overrides]]
module = [
    "inference_server.*",
]
ignore_errors = true
